# bookwise-analytics

./: .coverage  .gitignore  .slugignore  README.md  app.py  conftest.py  google_api_cache.json  pyproject.toml  pytest.ini  requirements.txt
app_pages/: multipage.py  page_book_analytics_explorer.py  page_insights_diversity.py  page_member_insights.py  page_model_analytics_explorer.py  page_model_runner.py  page_recommendation_comparison.py  page_summary.py
data/sample/: bbe_books_sample.csv  books_sample.csv  ratings_sample.csv
documentation/: TEST.md
notebooks/: 01_Data_Colletion.ipynb  02_Data_Cleaning.ipynb  03_Data_Enrichment_and_Dataset_Integration.ipynb  03_Data_Imputation.ipynb  04_Exploratory Data Analysis.ipynb  04_Exploratory_Data_Analysis.ipynb  05_Feature_Engineering.ipynb  06_Modeling.ipynb  07_Member_Cluster.ipynb
outputs/datasets/analysis/: genre_entropy_summary.txt  genre_preference_summary.csv  internal_book_genre_mapping.csv  internal_genre_stats.csv  user_activity.csv
outputs/datasets/modeling/1/: final_features.csv
outputs/eda_plots/: external_corr_matrix.csv  internal_corr_matrix.csv  metadata_corr_matrix.csv  supply_genre_stats.csv
outputs/model_plots/: et_feature_importance.csv  model_eval_predictions.csv  rf_feature_importance.csv
outputs/models/: baseline_metrics.json  metrics.json
outputs/models/extratree/2/: metrics.json
src/analysis/: analysis.py
src/cleaning/mappings/: format_dict.json  languages_dict.json  publisher_parent_mapping.json  publishers_dict.json
src/cleaning/utils/: categories.py  dates.py  helpers.py  identifiers.py  language.py  metadata_cleaning.py  numeric.py  pipeline.py  text_cleaning.py  validate.py
src/eda/: plot_comparison.py  plot_distribution.py  utils.py
src/modeling/: feature_engineering.py  modeling_pipeline.py
tests/: test_analysis.py  test_cleaning_utils.py  test_fe_engineering.py  test_modeling.py  test_pipeline.py
(+1 files in other folders)
